Evaluation not mandatory for non-assignment
