# docs/openapi-full.json
@@ -827,6 +827,106 @@
         }
       }
     },
+    "/api/feedback/no/{roomId}" : {
+      "post" : {
+        "tags" : [ "Feedback" ],
+        "summary" : "Marks as not wanting to submit feedback when this chatroom is not an assignment.",
+        "operationId" : "postApiDoNotWantFeedback",
+        "parameters" : [ {
+          "name" : "roomId",
+          "in" : "path",
+          "description" : "Id of the Chatroom",
+          "required" : true,
+          "deprecated" : false,
+          "allowEmptyValue" : false,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "session",
+          "in" : "query",
+          "description" : "Session Token",
+          "required" : false,
+          "deprecated" : false,
+          "allowEmptyValue" : false,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "text/plain" : {
+              "schema" : {
+                "type" : "string"
+              }
+            }
+          },
+          "required" : false
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/SuccessStatus"
+                }
+              }
+            }
+          },
+          "400" : {
+            "description" : "Bad Request",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorStatus"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "Unauthorized",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorStatus"
+                }
+              }
+            }
+          },
+          "403" : {
+            "description" : "Forbidden",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorStatus"
+                }
+              }
+            }
+          },
+          "404" : {
+            "description" : "Not Found",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorStatus"
+                }
+              }
+            }
+          },
+          "409" : {
+            "description" : "Conflict",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorStatus"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/feedbackhistory/{roomId}" : {
       "get" : {
         "tags" : [ "Feedback" ],
@@ -1397,9 +1497,11 @@
         }
       },
       "ChatRoomInfo" : {
-        "required" : [ "prompt", "startTime", "remainingTime", "uid", "userAliases", "alias" ],
         "type" : "object",
         "properties" : {
+          "assignment" : {
+            "type" : "boolean"
+          },
           "uid" : {
             "type" : "string"
           },
@@ -1413,8 +1515,8 @@
           },
           "userAliases" : {
             "type" : "array",
-            "items": {
-              "type": "string"
+            "items" : {
+              "type" : "string"
             }
           },
           "alias" : {
@@ -1422,8 +1524,12 @@
           },
           "prompt" : {
             "type" : "string"
+          },
+          "markAsNoFeedback" : {
+            "type" : "boolean"
           }
-        }
+        },
+        "required" : [ "assignment", "uid", "remainingTime", "userAliases", "alias", "prompt", "markAsNoFeedback" ]
       },
       "ChatRoomAdminInfo" : {
         "required" : [ "prompt", "startTime", "remainingTime", "users", "uid" ],
